--- a/wa.user.styl
+++ b/wa.user.styl
@@ -6,7 +6,7 @@
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.styl
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      3.6.0
+@version      3.6.1
 @license      MIT
 @preprocessor stylus
 
@@ -357,13 +357,13 @@ OM = _omsg
     $top += "on a rewrite for UserStyles.world (as a replacement for USo), I am"
     $top += " looking for someone to help maintainin DWA."
     $top += "\A\ALink to USw: https://userstyles.world 👀 \A\A"
-    $top += "More about v3.6.0 update, as always, in the changelog:"
+    $top += "More about v3.6.1 update, as always, in the changelog:"
     $btm  = "\A https://github.com/vednoc/dark-whatsapp\A\A\A"
     $btm += "P.S. CSS can not add links, only fake/pseudo text."
 
     :root:not(#z), .dark:not(#z) {
         /// Userstyle info and announcements.
-        --version: '🌚 Dark-WhatsApp v3.6.0 — February 26th, 2021'
+        --version: '🌚 Dark-WhatsApp v3.6.1 — March 3rd, 2021'
         --message: $top
         --changes: $btm
 
