Fix Rounded corners for avatars option not working
I hope this is all good. I'm not very at home in userstyle editing.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1104,7 +1104,7 @@ OM = _omsg
         &, /._3PdFH { c: 0 0 bg5 }
 
         /// Avatars/images/new group/contact avatar/your avatar.
-        &, > img, /._2qsE7, /._1_JE6, /.JRQje, /._28-ha {
+        &, > img, /._2qsE7, /._1_JE6, /.JRQje, /._28-ha, /._3GlyB, /._8hzr9 {
             rad: var(--r-avatars) i
         }
 
