fix: update broken selectors for login/misc styles

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -978,7 +978,7 @@ OM = _omsg
         &, button, input { font-family: var(--ui-font) }
 
         /// Toast notifications.
-        ._2-NDv {
+        ._1Ftww {
             c: fg1
             border: 1px solid bg5 i
             button:nth-child(2) { c: ac1 }
@@ -1284,7 +1284,7 @@ OM = _omsg
                 [role='button'] { c: white 0 ac0 }
 
                 /// Change white border when inactive.
-                &._267ZZ {
+                &._2UwZ_.n4LVt {
                     outline: 4px solid ac0
                     box-shadow: 0 0 0 4px ac0
                 }
@@ -1299,7 +1299,7 @@ OM = _omsg
             }
 
             /// 'Keep me signed in' tooltip. #59
-            ._2-pPz {
+            a[href*='faq.whatsapp.com'] + div > span > div {
                 c: white 0 ac0
                 box-shadow: bsh
                 &::before { border-bottom-color: ac0 i }
@@ -1337,14 +1337,14 @@ OM = _omsg
 
         /// Right -> Remove top border from the first Links/Docs message.
         /div, /span {
-            div:first-child > .U7SeD::before { content: none }
+            div:first-child > ._36BuW::before { content: none }
         }
 
         /// Feat -> Input border radius.
-        .RPX_m { rad: var(--r-inputs) i }
+        .p3_M1 { rad: var(--r-inputs) i }
 
         /// Dropdowns -> Chat/Header.
-        > span > div, ._1qAEq {
+        > span > div, .o--vV {
             &[style ^= 'transform-origin:'][tabindex] {
                 box-shadow: var(--bshadow) i
                 border: 1px solid bg4
@@ -1353,12 +1353,12 @@ OM = _omsg
         }
 
         /// Floating emoji picker.
-        > span > ._2iHK1 {
+        > span > ._3IU7z {
             border: 1px solid bg5 i
             box-shadow: var(--bshadow) i
 
             /// Remove borders.
-            ._3ob6-, ._1BMu5 { border-left: none i }
+            div[tabindex='-1'] > div:only-child { border-left: none i }
 
             > [data-animate-dropdown-nib] {
                 border-bottom: 1px solid bg5
