--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1396,12 +1396,15 @@ OM = _omsg
         &::after { content: unset i }
 
         /// Search.
-        /._3LX7r {
+        /._3yWey {
             c: 0 0 bg2
             border-bottom: 1px solid bg5 i
-            label { box-shadow: inset 0 0 0 1px bg4 }
+            label {
+                rad: var(--r-inputs) i
+                box-shadow: inset 0 0 0 1px bg4
+            }
             &::after { display: none i }
-            &._1brJQ { box-shadow: var(--bshadow) }
+            &:focus-within { box-shadow: var(--bshadow) }
         }
 
         /// Left -> Resets.
@@ -1419,7 +1422,7 @@ OM = _omsg
                         > div { display: none i }
                     } else if (app_alerts == 'notifications') {
                         > div { border-bottom: 1px solid bg5 i }
-                        > div._1Lctt { display: none i }
+                        > div._2C_7j { display: none i }
                     } else {
                         border-bottom: 1px solid bg5 i
                     }
@@ -1432,11 +1435,11 @@ OM = _omsg
             border-left: 1px solid bg5 i
 
             /// Remove shadows from drawer sections.
-            /._3ZEdX { box-shadow: 0 0 0 1px bg4 i }
+            section > div { box-shadow: 0 0 0 1px bg4 i }
 
             /// Remove native dark mode dividers.
-            /.dark .three {
-                #main > *, ._1gL0z { border-right: none i }
+            /.dark .three #main {
+                > *, .copyable-area > div[tabindex='0'] { border-right: none i }
             }
         }
 
