--- a/wa.user.styl
+++ b/wa.user.styl
@@ -862,6 +862,8 @@ OM = _omsg
         --toast-background-rgb: var(--bg-3-rgb) //8,14,18;
         --tooltip-background: to_rgba('bg-4', 0.85) //#595959d9;
         --tooltip-background-rgb: var(--bg-4) //89.25,89.25,89.25;
+        --tooltip-text: var(--fg-1) //hsl(0, 0%, 0%);
+        --tooltip-text-rgb: var(--fg-1-rgb) //0,0,0;
         --typing: var(--ac-0) //#00af9c;
         --typing-rgb: var(--ac-0-rgb) //0,175,156;
         --unread-background: var(--bg-3) //#1c282f;
