--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1151,16 +1151,14 @@ OM = _omsg
 
     // Modals.
     .overlay {
-        /// Media/Avatar viewers have different headers. @upstream
-        /[data-animate-media-viewer] {
-            > div:first-child, ../ > div:first-child {
-                border-bottom: 1px solid bg5 i
-                c: 0 0 bg2
-            }
-
-            /// Fix avatar header.
-            ../ [data-testid='cell-frame-container'] { c: 0 0 t }
+        /// Fix header in media viewer modal. @upstream
+        /[data-animate-media-viewer] > div:first-child{
+            border-bottom: 1px solid bg5 i
+            c: 0 0 bg2
         }
+
+        /// Remove header in avatar viewer modal.
+        [data-testid='cell-frame-container'] { c: 0 0 t }
 
         /// Add borders.
         [data-animate-modal-popup] {
