fix: update parent selector for rounded corners

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1101,7 +1101,7 @@ OM = _omsg
     }
 
     // Feat -> Rounded corners for avatars.
-    .-y4n1[style] {
+    ._3GlyB[style] {
         /// Global/shared contacts.
         &, /._3PdFH { c: 0 0 bg5 }
 
@@ -1109,9 +1109,6 @@ OM = _omsg
         &, > img, /._3GlyB, /._8hzr9, /._1TGpC, /.gDU26 {
             rad: var(--r-avatars) i
         }
-
-        /// Add rounded corners to the default group SVG avatar.
-        /._1Gyz6 { c: 0 0 bg5 }
 
         /// Fix 'New group' bottom divider to hide drawer background-color.
         /[data-list-scroll-offset] > div:first-child > div:last-child {
