vars: remap colors for new native color variables

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -580,6 +580,8 @@ OM = _omsg
         --checkbox-background-rgb: var(--ac-0-rgb) //0,175,156;
         --checkbox-mark: var(--white) //#101d24;
         --checkbox-mark-rgb: var(--white-rgb) //16,29,36;
+        --chevron-button-background: var(--bg-3) //#f1f1f259;
+        --chevron-button-background-rgb: var(--bg-3-rgb) //241,241,242;
         --compose-input-background-focused: var(--bg-0) //#3f5560;
         --compose-input-background-focused-rgb: var(--bg-0-rgb) //63,85,96;
         --compose-input-background: var(--bg-1) //#33383b;
@@ -848,10 +850,10 @@ OM = _omsg
         --system-message-background-rgb: (ow_sys_msg) ? to_rgb(sys_msg_bg) : var(--b6-4-rgb) //30,42,48;
         --system-message-text: to_rgba('fg-1', 0.87) //#f1f1f2de;
         --system-message-text-rgb: var(--fg-1-rgb) //241,241,242;
-        --teal-hover: #00b7a1;
-        --teal-hover-rgb: 0,183,161;
-        --teal-pale: #5fc8bc;
-        --teal-pale-rgb: 95,200,188;
+        --teal-hover: var(--ac-0) //#00b7a1;
+        --teal-hover-rgb: var(--ac-0-rgb) //0,183,161;
+        --teal-pale: var(--ac-3) //#5fc8bc;
+        --teal-pale-rgb: var(--ac-3-rgb) //95,200,188;
         --thumb-border-active: var(--bg-2) //#75787a;
         --thumb-border-active-rgb: var(--bg-2-rgb) //117,120,122;
         --thumb-border-active-new-media-editor: var(--fg-4) //#f1f1f2;
@@ -860,10 +862,10 @@ OM = _omsg
         --thumb-border-viewer-active-rgb: var(--fg-3-rgb) //117,120,122;
         --toast-background: to_rgba('bg-3', 0.96) //#080e12f5;
         --toast-background-rgb: var(--bg-3-rgb) //8,14,18;
-        --tooltip-background: to_rgba('bg-4', 0.85) //#595959d9;
-        --tooltip-background-rgb: var(--bg-4) //89.25,89.25,89.25;
         --tooltip-text: var(--fg-1) //hsl(0, 0%, 0%);
         --tooltip-text-rgb: var(--fg-1-rgb) //0,0,0;
+        --tooltip-background: to_rgba('bg-4', 0.85) //#fff;
+        --tooltip-background-rgb: var(--bg-4) //255,255,255;
         --typing: var(--ac-0) //#00af9c;
         --typing-rgb: var(--ac-0-rgb) //0,175,156;
         --unread-background: var(--bg-3) //#1c282f;
