--- a/wa.user.styl
+++ b/wa.user.styl
@@ -4,7 +4,7 @@
 @namespace    github.com/vednoc/dark-whatsapp
 @homepageURL  https://github.com/vednoc/dark-whatsapp
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
-@updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.styl
+@updateURL    https://userstyles.world/api/style/4.user.css
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
 @version      3.6.1
 @license      MIT
